fix authenticate and GET api

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@tanstack/react-table": "^8.20.1",
     "antd": "^5.18.3",
     "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
