--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.383.0",
     "next": "14.2.3",
