--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NEXT_PUBLIC_API_ENDPOINT = https://api.thrivohr.cloud
 #NEXT_PUBLIC_API_ENDPOINT = https://localhost:7274
-NEXT_PUBLIC_URL = https://productic.com
+NEXT_PUBLIC_URL = https://owl-touched-slug.ngrok-free.app
